k8s/loadbalancer-auth.yaml
apiVersion: v1
kind: Service
metadata:
  name: external-lb
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 4001
    protocol: TCP
    name: http
  selector:
    app: auth-api
